# colt-lang-old

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang16_build.yml  clang16_test.yml  cmake_clang15.yml  cmake_clang16.yml  cmake_g++12.yml  cmake_msvc.yml  g++12_build.yml  g++12_test.yml  linter.yml  msvc_build.yml  msvc_test.yml
resources/: coding_guidelines.md  colt_design.md  colt_grammar.md  coltc_design.md
resources/cmake/: cmake_colt_config.in
resources/doxygen/: Doxyfile.in  main.md
resources/examples/: 01.clt  01.ct  02.clt  02.ct
resources/icon/: colt.rc
resources/tests/ast/: 'break' can only appear inside a loop!.ct  '{}' can only be applied on mutable types!.ct  Expected a 'ARROW'!.ct  Expected a typename!.ct  Expected an expression! RETURN.ct  Unary 'STAR' can only be applied on pointer types!.ct  Variable of name '{}' does not exist!.ct
resources/tests/ast/semantics/: 'out' arguments must be the first arguments of a function!.ct  A loop named '{}' already exists!.ct  Cannot deduce return type of function because of ambiguity!.ct  Global '{}' is ambiguous!.ct  Global '{}' is private!.ct  Global of name '{}' already exists!.ct  Module '{}' was not found!.ct  No loop with name '{}' exists!.ct
resources/tests/ast/syntax/: 'void' typename cannot be marked as mutable nor const!.ct  '{}' does not support '{}' operator!.ct  Cannot assign to a non-mutable variable!.ct  Cannot have parameters of same name '{}'!.ct  Cannot write through pointer to non-mutable type ('{}')!.ct  (+4 more)
resources/tests/cte/: 2024.09.18.cte  empty.cte
resources/tests/lexer/: lexer.ct  lexer_eof.ct  lexer_int.ct
resources/tests/semantics/: 'global' module does not support private OR public blocks!.ct  Ambiguous module name!.ct  Cannot read from a variable that may be uninitialized!.ct  Cannot read from an uninitialized variable!.ct  Function '{}' expects argument '{}' to be of type '{}', not '{}'!.ct  Function '{}' expects {} argument{} not {}!.ct  Global '{}' does not exist!.ct
resources/tests/syntax/: 'bit_as' conversion can only be applied on or to bytes types!.ct  'cmut' should not be preceded by 'const' or 'mut'!.ct  'continue' can only appear inside a loop!.ct  'global' module does not support private or public blocks!.ct  An extern function cannot have a body!.ct  An uninitialized variable should specify its type!.ct  Expected a 'EQUAL'!.ct  Expected a 'GT'.ct  Expected a 'LT'!.ct  Expected a declaration!.ct  Expected a statement!.ct  Expected an expression! BINARY.ct  Expected an identifier or 'module'!.ct  Expected an identifier! MODULE.ct  Expected an identifier, not '{}'!.ct  Expected the beginning of a scope ('{' or 'COLON')!.ct  Left hand side of an assignment should be a variable!.ct  Type of return value ({}) does not match function return type ({})!.ct  Type should not be qualified!.ct  Unary 'PLUS' is not supported!.ct  Unclosed curly bracket delimiter!.ct
scripts/: README.md  build_colt.py  build_documentation.py  build_run_tests.py  generate_project.py
src/: args.h  main.cpp
src/ast/: ast.cpp  ast.h  colt_expr.h  colt_expr_buffer.h  colt_expr_token.h  colt_global.h  parsed_program.cpp  parsed_program.h  parsed_unit.cpp  parsed_unit.h
src/backend/colti/: colti_assembler.h  colti_disassembler.cpp  colti_disassembler.h  colti_encode.cpp  colti_encode.h  colti_exe.cpp  colti_exe.h  colti_ip.h  colti_opcodes.h  colti_stack.h
src/backend/run/: clt_dyncall.h  clt_dynload.cpp  clt_dynload.h  qword_op.h
src/colt/: colt_type.h  colt_type_buffer.cpp  colt_type_buffer.h  colt_type_token.h
src/err/: composable_reporter.h  error_reporter.h  io_reporter.cpp  io_reporter.h  warn.h
src/frontend/ast/: ast.cpp  ast.h  colt_expr.h  colt_expr_buffer.h  colt_expr_token.h  parsed_program.cpp  parsed_program.h  parsed_unit.cpp  parsed_unit.h
src/frontend/err/: composable_reporter.h  error_reporter.h  io_reporter.cpp  io_reporter.h  warn.h
src/frontend/lex/: ascii.h  colt_lexeme.h  colt_lexer.cpp  colt_lexer.h  colt_operators.h  colt_token_buffer.cpp  colt_token_buffer.h
src/frontend/lng/: colt_builtin_id.h  colt_global.h  colt_module.h  colt_module_name.h  colt_support_op.cpp  colt_support_op.h  colt_type.cpp  colt_type.h  colt_type_buffer.cpp  colt_type_buffer.h  colt_type_token.h  macro_helper.h  union_macro.h
src/io/: color.h  input.cpp  input.h  print.h
src/lex/: ascii.h  colt_lexeme.h  colt_lexer.cpp  colt_lexer.h  colt_operators.h  colt_token.h  colt_token_buffer.cpp  colt_token_buffer.h  test_lexer.cpp  test_lexer.h
src/lng/: colt_builtin_id.h  colt_global.h  colt_module.h  colt_module_name.h  colt_support_op.cpp  colt_support_op.h  colt_type.cpp  colt_type.h  colt_type_buffer.cpp  colt_type_buffer.h  colt_type_token.h  macro_helper.h
src/mem/: block.h  composable_alloc.h  global_alloc.h  sizes.h
src/meta/: meta_constexpr_map.h  meta_enum.h  meta_maths.h  meta_reflect.h  meta_string_literal.h  meta_traits.h  meta_type_list.h
src/run/: clt_dyncall.h  qword_op.h
src/structs/: common.h  expect.h  list.h  map.h  option.h  set.h  static_vector.h  string.h  unique_ptr.h  vector.h
src/test/: run_tests.cpp  run_tests.h  test_ffi.cpp  test_ffi.h  test_lexer.cpp  test_lexer.h
src/type/: colt_builtin_id.h  colt_type_buffer.cpp  colt_type_buffer.h  colt_type_token.h
src/util/: args_parsing.h  assertions.h  colt_pch.h  config_type.h  exit_recursion.h  hash.h  macros.h  parse.h  run_tests.cpp  run_tests.h  token_helper.h  types.h
src/util/common/: assertions.h  bits.h  colt_pch.h  exit_recursion.h  hash.h  macros.h  parse.h  raii_helper.h  token_type.h  types.h
src/util/io/: args_parsing.h  color.h  input.cpp  input.h  parse.h  print.h
src/util/mem/: allocator_traits.h  block.h  composable_alloc.h  global_alloc.h  simple_alloc.h  sizes.h
src/util/meta/: meta_constexpr_map.h  meta_enum.h  meta_maths.h  meta_reflect.h  meta_string_literal.h  meta_traits.h  meta_type_list.h
src/util/structs/: common.h  expect.h  list.h  map.h  option.h  set.h  static_vector.h  string.h  unique_ptr.h  vector.h
